# Text2Pyspark

./: .env.example  .gitignore  Dockerfile  README.md  app.py  create_faiss.py  docker-compose.yml  main.py  pgvector.sh  pyproject.toml  pyproject.toml_  requirements.txt  setup.py  table_catalog.csv  table_metadata2.json  version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md
.github/workflows/: pr-notification.yml  pre-commit.yml  pypi-release.yml
cli/: __init__.py
data/q_sql/default_0.0.1/: eval_result_0.json  eval_result_1.json  eval_result_2.json  eval_result_3.json  eval_result_4.json  eval_result_5.json
data/q_sql/refine_update_0.0.1/: eval_result_0.json  eval_result_1.json  eval_result_2.json  eval_result_3.json  eval_result_4.json  eval_result_5.json
data/questions/: 0.json  1.json  2.json  3.json  4.json
data_utils/: __init__.py  datahub_source.py  queries.py
data_utils/datahub_services/: __init__.py  base_client.py  glossary_service.py  metadata_service.py  query_service.py
db_utils/: __init__.py  base_connector.py  clickhouse_connector.py  config.py  databricks_connector.py  duckdb_connector.py  logger.py  mariadb_connector.py  mysql_connector.py  oracle_connector.py  postgres_connector.py  snowflake_connector.py  sqlite_connector.py
docs/: README.md  branch_guidelines.md  pull_request_guidelines.md
docs/tutorials/: getting-started-without-datahub.md
engine/: __init__.py  query_executor.py
evaluation/: gen_answer.py  gen_persona.py  gen_question.py  persona_class.py  utils.py
infra/: __init__.py
infra/db/: __init__.py  connect_db.py
infra/monitoring/: __init__.py  check_server.py
infra/observability/: token_usage.py
interface/: DB_Builder.py  graph_builder.py  lang2sql.py  streamlit_app.py  viz_eval.py
llm_utils/: README.md  chains.py  check_server.py  connect_db.py  display_chart.py  enriched_graph.py  graph.py  llm_factory.py  llm_response_parser.py  prompts_class.py  query_executor.py  retrieval.py  token_utils.py  tools.py
llm_utils/graph_utils/: __init__.py  base.py  basic_graph.py  enriched_graph.py  profile_utils.py  simplified_graph.py
llm_utils/llm/: __init__.py  factory.py
llm_utils/tools/: __init__.py  datahub.py
llm_utils/vectordb/: __init__.py  factory.py  faiss_db.py  pgvector_db.py
prompt/: create_query_maker_chain.yaml  mysql.yaml  profile_extraction_prompt.md  prompt_md_sample.md  query_enrichment_prompt.md  query_maker_prompt.md  query_refiner_prompt.md  system_prompt.md  system_prompt.yaml  template.py  template_loader.py
table_info_db/: index.faiss  index.pkl
test/test_llm_utils/: test_llm_response_parser.py
viz/: __init__.py  display_chart.py
