[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
    /(
    \.git
      | \.venv
      | build
      | dist
    )/
)
'''

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[project]
name = "lang2sql"
version = "0.1.9"
description = ""
authors = [
    {name = "Yoonjin Hwang",email = "21603682@hankooktech.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "langgraph (==0.2.62)",
    "datahub (==0.999.1)",
    "langchain (==0.3.14)",
    "langchain-community (==0.3.14)",
    "openai (==1.59.8)",
    "langchain-openai (==0.3.0)",
    "streamlit (==1.41.1)",
    "python-dotenv (==1.0.1)",
    "faiss-cpu (==1.10.0)",
    "pre-commit (==4.1.0)",
    "setuptools (>=78.1.1,<79.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "twine (>=6.1.0,<7.0.0)",
    "langchain-aws (>=0.2.21,<0.3.0)",
    "langchain-google-genai (>=2.1.3,<3.0.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "transformers (==4.51.2)",
    "numpy (<2.0)",
]

[tool.poetry.group.database.dependencies]
clickhouse-driver = ">=0.2.9,<0.3.0"
snowflake-connector-python = ">=3.15.0,<4.0.0"
databricks-sql-connector = ">=4.0.3,<5.0.0"
mysql = ">=0.0.3,<0.0.4"
oracledb = ">=3.1.0,<4.0.0"
mysql-connector-python = ">=9.3.0,<10.0.0"
duckdb = ">=1.2.2,<2.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
pyodbc = ">=5.1.0,<6.0.0"
crate = ">=0.29.0,<1.0.0"
pyhive = ">=0.6.6,<1.0.0"
google-cloud-bigquery = ">=3.20.1,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
